@@ -69,10 +69,19 @@
     <classifier>${os.detected.name}-${os.detected.arch}</classifier>
     <version>${jlama.version}</version> <!-- Version from langchain4j-jlama pom -->
 </dependency>
+
+
+
+<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.20.0</version>
+</dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>edu.utmb.ontology</groupId>
       <artifactId>hootation-core</artifactId>
-      <version>${project.version}</version>
+      <version>1.0</version>
     </dependency>
   </dependencies>
 
@@ -82,7 +91,7 @@
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
-          <version>3.4.0</version>
+          <version>3.5.0</version>
         </plugin>
         <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
@@ -91,11 +100,34 @@
         </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.13.0</version>
+          <version>3.14.0</version>
+          <configuration>
+              
+
+                  <source>21</source>
+                  <target>21</target>
+                  <compilerArgs>
+                    <arg>--add-modules=jdk.incubator.vector</arg>
+                  </compilerArgs>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.5.3</version>
+          <executions>
+              <execution>
+              <configuration>
+               <argLine>
+                --add-modules=jdk.incubator.vector
+                --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+                --enable-preview
+                --enable-native-access=ALL-UNNAMED
+                --add-exports java.base/jdk.internal.vm.vector=ALL-UNNAMED
+                -Djava.library.path=../jlama-native/target/native-lib-only
+                </argLine>
+              </configuration>
+              </execution>
+          </executions>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
@@ -103,16 +135,16 @@
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
-          <version>3.1.2</version>
+          <version>3.1.4</version>
         </plugin>
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.1.2</version>
+          <version>3.1.4</version>
         </plugin>
         <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.12.1</version>
+          <version>3.21.0</version>
         </plugin>
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
